--- a/Login/tela-de-login.html
+++ b/Login/tela-de-login.html
@@ -5,30 +5,37 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style-login.css">
-  <script defer src="app.js"></script>
   <title>Tela de login</title>
 </head>
 <body>
   <header class="header">
     <nav class="nav">
-      <a href="/"class="logo">MRTelles</a>
+      <a href="/" class="logo">M R Telles</a>
       <button class="hamburger"></button>
       <ul class="nav-list">
-      <li><a href="#">Início</a></li>
-      <li><a href="#">Sobre</a></li>
-      <li><a href="#">Serviços</a></li>
-      <li><a href="#">Contato</a></li>
-      <li><a href="#">Agende um horário</a></li>      
+        <li><a href="#">Início</a></li>
+        <li><a href="#">Sobre</a></li>
+        <li><a href="#">Serviços</a></li>
+        <li><a href="#">Contato</a></li>
+        <li><a href="#">Agende um horário</a></li>      
       </ul>
     </nav>
   </header>
-  <div>
+  
+  <!-- Botão de Login -->
+  <button id="loginBtn">Login</button>
+  
+  <!-- Div de Login (inicialmente oculta) -->
+  <div id="loginDiv">
+    <button id="closeBtn">X</button> <!-- Botão "X" para fechar a div -->
     <h1>Login</h1> 
     <input type="text" placeholder="Digite seu nome de usuário">
     <br><br>
-    <input type="password" name="senha">
+    <input type="password" name="senha" placeholder="Digite sua senha">
     <br><br>
     <button>Enviar</button>
   </div>
+
+  <script defer src="app.js"></script>
 </body>
 </html>
