--- a/formulario-cadastro-cliente/formulario.html
+++ b/formulario-cadastro-cliente/formulario.html
@@ -17,6 +17,9 @@
                     <input type="text" name="nome" id="nome" class="inputUser" required>
                     <label for="nome" class="labelInput">Nome completo</label>
                 </div>
+                <!-- Campos de entrada para email, telefone, sexo, data de nascimento, cidade, estado e endereço -->
+                <!-- Os campos são obrigatórios com o atributo 'required' -->
+                <div class="inputBox">
                 <br><br>
                 <div class="inputBox">
                     <input type="text" name="email" id="email" class="inputUser" required>
@@ -29,6 +32,8 @@
                 </div>
                 <br>
                 <p>Sexo</p>
+                <!-- Opções de seleção de gênero -->
+                <!-- Cada opção está vinculada a um ID -->
                 <input type="radio" name="genero" id="feminino" value="feminino" required>
                 <label for="feminino">Feminino</label>
                 <br>
